[gd_scene load_steps=2 format=3 uid="uid://c44k516m10rxp"]

[ext_resource type="Script" path="res://SoundPlayer.gd" id="1"]

[node name="SoundPlayer" type="Node"]
script = ExtResource("1")

[node name="Overlays" type="Node" parent="."]

[node name="bells" type="AudioStreamPlayer" parent="Overlays"]

[node name="quest1" type="AudioStreamPlayer" parent="Overlays"]
volume_db = -4.0

[node name="quest2" type="AudioStreamPlayer" parent="Overlays"]
volume_db = -1.0

[node name="quest3" type="AudioStreamPlayer" parent="Overlays"]

[node name="Channels" type="Node" parent="."]

[node name="Music1" type="AudioStreamPlayer" parent="Channels"]
bus = &"music"

[node name="Music2" type="AudioStreamPlayer" parent="Channels"]
bus = &"music"

[node name="SFX1" type="AudioStreamPlayer" parent="Channels"]
bus = &"sfx"

[node name="SFX2" type="AudioStreamPlayer" parent="Channels"]
bus = &"sfx"

[node name="SFX3" type="AudioStreamPlayer" parent="Channels"]
bus = &"sfx"

[node name="Voice1" type="AudioStreamPlayer" parent="Channels"]
bus = &"voice"

[node name="Callout1" type="AudioStreamPlayer" parent="Channels"]
bus = &"voice"

[node name="Tweens" type="Node" parent="."]

[node name="DuckAttack" type="Timer" parent="."]
one_shot = true

[node name="DuckRelease" type="Timer" parent="."]
one_shot = true
